@@ -12,6 +12,7 @@ WriteMakefile(
 			    'Test::More' => 0,
 			    'version'    => 0,
 			    'YAML' => 0,
+			    'File::Slurp' => 0,
 			    'DBIx::Class' => 0
 			   },
 	      dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
